2005-11-08  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-cancellable-ops.c (gnome_vfs_get_file_info_uri_cancellable):
	Check for NULL info. (#320476)
	Patch from Thomas Wabner

2005-11-08  Alexander Larsson  <alexl@redhat.com>
	
	* doc/about.sgml:
	Change example to handle shell arguments.

2005-11-07  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-hal-mounts.c: (_hal_add_volume):
	Fix for earlier change.
	Patch from Jon Nettleton

2005-11-04  Matthias Clasen  <mclasen@redhat.com>

	* libgnomevfs/xdgmime.c (xdg_mime_list_mime_parents): Prevent
	a segfault.

2005-11-04  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-hal-mounts.c:
	Fix problem with multiple cd volumes (#319689)
	Patch from Jon Nettleton

2005-10-30  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* programs/gnomevfs-ls.c: (list), (main): fix typo (quite => quiet).

2005-10-30  Christian Kellner  <gicmo@gnome.org>

	* programs/gnomevfs-ls.c: (list), (main): Add command line option
	to suppress stat info output and another one for timing the operation.

2005-10-28  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-mime.c:
	* libgnomevfs/gnome-vfs-mime-private.h:
	* libgnomevfs/gnome-vfs-mime-utils.h:
	* libgnomevfs/gnome-vfs-vfs-utils.c:
	Add gnome_vfs_get_slow_mime_type API. Rename _gnome_vfs_get_slow_mime_type
	to _gnome_vfs_get_slow_mime_type_internal, make it return errors on
	failure and use it in gnome_vfs_url_show_with_env and
	gnome_vfs_get_slow_mime_type.

2005-10-26  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-dns-sd.c:
	No need to get server version to check for success.
	
	* modules/dns-sd-method.c:
	Also support davs.

2005-10-25  Alexander Larsson  <alexl@redhat.com>

	* modules/Makefile.am: 
	Add Avahi cflags/libs to dns-sd module

2005-10-25  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	* libgnomevfs/gnome-vfs-dns-sd.c:
	* modules/dns-sd-method.c: